terraform/platform/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: anvilops
  labels:
    app.kubernetes.io/part-of: anvilops
    app.kubernetes.io/managed-by: kustomize
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
